# SWAGSlides

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  package.json  start.js
electron/: build.js  package-lock.json  package.json
electron/app/: main.ts
electron/app/ipc/: api_handlers.ts  export_handlers.ts  index.ts  user_config_handlers.ts
electron/app/preloads/: index.ts
electron/app/utils/: constants.ts
electron/servers/fastapi/: pyproject.toml  server.spec
electron/servers/nextjs/: package-lock.json
servers/fastapi/: mcp_server.py  pyproject.toml
servers/fastapi/api/: main.py
servers/fastapi/api/v1/ppt/endpoints/: fonts.py  presentation.py
servers/fastapi/constants/: presentation.py
servers/fastapi/models/: generate_presentation_request.py  llm_message.py  pptx_models.py
servers/fastapi/services/: docling_service.py  icon_finder_service.py  image_generation_service.py  llm_client.py  temp_file_service.py
servers/fastapi/tests/: test_pptx_creator.py
servers/fastapi/utils/: available_models.py  llm_client_error_handler.py  model_availability.py  process_slides.py  schema_utils.py
servers/fastapi/utils/llm_calls/: generate_presentation_outlines.py  generate_slide_content.py
servers/nextjs/: next.config.mjs  package.json
servers/nextjs/app/: ConfigurationInitializer.tsx  MixpanelInitializer.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx
servers/nextjs/components/: AnthropicConfig.tsx  CustomConfig.tsx  GoogleConfig.tsx  Header.tsx  OllamaConfig.tsx  OpenAIConfig.tsx
(+223 files in other folders)
